--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,10 +1,11 @@
 .header {
     text-align: center;
-    padding: 100px;
+    padding: 50px;
+    width: 98%;
     color: white;
     gap: 30px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
   
@@ -79,7 +80,10 @@
   display: flex;
   flex-direction: column;
   border:1px solid #ff6a00;
-  border-radius: 50px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 90px;
   background: linear-gradient(to right, #ff6a00, #ee0979);
-  // background-image: url(../../../public/images/bg-pattern-intro-desktop.svg);
+  // background-image: url();
 }
