--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -47,3 +47,40 @@
     font-size: 10px;
   }
 }
+
+@media (max-width: 769px) {
+  .introducing {
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+  }
+
+  .image {
+    max-width: 100%;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .intro {
+    width: 100%;
+    gap: 20px;
+
+    .editor,
+    .management {
+      padding: 15px;
+      max-width: 100%;
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      p {
+        font-size: 0.9rem;
+      }
+    }
+    .title {
+      margin-left: 0;
+      font-size: 8px;
+    }
+  }
+}
