--- a/src/components/closing/closing.scss
+++ b/src/components/closing/closing.scss
@@ -21,6 +21,7 @@
     padding: 20px;
     background: azure;
     color: #222;
+    margin-left: 100px;
   
     h2 {
       font-size: 1.8rem;
@@ -38,3 +39,38 @@
     }
   }
   
+
+  @media (max-width: 769px) {
+    .closing-tag {
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 20px;
+      gap: 10px;
+      width: 900px;
+    }
+  
+    .image {
+      margin-left: 0;
+      margin-bottom: 20px;
+    }
+  
+    .closing {
+      padding: 15px;
+      margin-left: 0;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+  
+      h2 {
+        font-size: 1.5rem;
+      }
+  
+      h3 {
+        font-size: 1.2rem;
+      }
+  
+      p {
+        font-size: 0.9rem;
+      }
+    }
+  }
