--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -33,3 +33,24 @@
     }
   }
   
+
+  @media (max-width: 769px) {
+    .footer {
+      flex-direction: column;
+      padding: 20px;
+      gap: 20px;
+      border-top-right-radius: 0;
+  
+      .footer-section {
+        h4 {
+          font-size: 1.2rem;
+        }
+  
+        ul {
+          li {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+  }  
