--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -37,7 +37,6 @@
     }
   }
 .navbar{
-
   text-align: center;
   align-items: center;
   display: flex;
@@ -85,5 +84,46 @@
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 90px;
   background: linear-gradient(to right, #ff6a00, #ee0979);
-  // background-image: url();
+  // background-image: url(../../../public/images/bg-pattern-intro-desktop.svg);
+  // background-repeat: no-repeat;
+  // background-position: left;
+  // background-blend-mode: darken;
+}
+
+@media (max-width: 769px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 100px;
+    margin-left: 5px;
+    gap: 10px;
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+
+    button, .button-l {
+      padding: 8px 15px;
+    }
+  }
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 5px;
+    align-items: center;
+    margin-left: 5px;
+  }
+  .main-header{
+    width: 900px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
