--- a/src/components/inf/inf.scss
+++ b/src/components/inf/inf.scss
@@ -8,7 +8,7 @@
   border-top-right-radius: 90px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  width: 98%;
+  width: 94%;
 }
 
 .image {
@@ -39,4 +39,32 @@
   }
 }
 
-  
+@media (max-width: 769px) {
+  .middle-part {
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+    border-top-right-radius: 0;
+    width: 95%;
+  }
+
+  .image {
+    max-width: 100%;
+    max-height: auto;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .infrastructure {
+    max-width: 100%;
+    margin-left: 0;
+
+    h2 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 0.9rem;
+    }
+  }
+}
