--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -15,7 +15,10 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-  
+      
+      a{
+        text-decoration: underline;
+      }
       h4 {
         font-size: 1.5rem;
         margin-bottom: 10px;
